# cereal_testing

./: .gitignore  CMakeLists.txt  README.rst
cereal/: README
cereal/details/: polymorphic_impl.hpp
cereal/types/: polymorphic.hpp
include/: file0.h  file1.h  file2.h
src/: file0.cxx  file1.cxx  file2.cxx  main.cxx  main2.cxx
